# operon

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  manage.py  pyproject.toml  requirements.txt  tenant_manage.py
clients/: __init__.py  admin.py  models.py
clients/migrations/: 0001_initial.py
config/: asgi.py  ckeditor_settings.py  jazzmin_settings.py  public_urls.py  settings.py  tenant_urls.py  urls.py  views.py  wsgi.py
config/settings/: __init__.py  base.py  dev.py
docs/: multitenant_integration.md  tenant_management.md
requirements/: base.txt  dev.txt  prod.txt
saas/: __init__.py  admin.py  middleware.py
src/base/: admin.py  constants.py  models.py
src/core/: admin.py  apps.py  models.py
src/dashboard/: __init__.py  admin.py  apps.py  models.py  services.py  views.py
src/expense_management/: admin.py  apps.py  models.py
src/inventory/: admin.py  apps.py  constants.py  models.py
src/libs/: __init__.py  middleware.py  storage.py
src/order_management/: admin.py  apps.py  constants.py  models.py  service.py  urls.py
src/party_management/: admin.py  apps.py  models.py
src/purchase/: admin.py  apps.py  constants.py  models.py  service.py  views.py
src/sales/: admin.py  apps.py  constants.py  models.py  service.py
src/user/: admin.py  apps.py
static/css/: jazzmin.css  style.css
static/js/: jazzmin.js  purchase_return.js
templates/: home.html
templates/admin/: change_form.html  (+4 more)
tenants/: __init__.py  admin.py  admin_site.py  apps.py  middleware.py  models.py
website/: apps.py  forms.py  views.py
(+39 files in other folders)
