[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "tabflux-backend-service"
version = "0.1.0"
description = "Tabflux Backend Service"
readme = "README.md"
requires-python = ">=3.11"


[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["alembic/versions/*", "**/migrations/**", "venv/*", "media/*"]

[tool.black]
line-length = 100
target-version = ["py311"]
extend-exclude = '''
(
  .*/migrations/.*
)
'''

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["src"]
multi_line_output = 3
include_trailing_comma = true
skip = ["migrations"]
extend_skip_glob = ["**/migrations/*.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["B904", "E501", "B008"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query", "fastapi.Header"]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.mypy]
python_version = "3.11"
mypy_path = "types"
